fix layout breaks

--- a/child-custom.css
+++ b/child-custom.css
@@ -141,6 +141,7 @@ h3.gdlr-blog-title::before{
   padding:0;
   height:100%;
   display:block;
+  word-wrap:break-word;
 }
 #document-section .pdf, #document-section .link{
   text-align:center;
@@ -332,7 +333,7 @@ h3.gdlr-blog-title::before{
   margin-bottom: 40px;
 }
 .gdlr-item-start-content {
-  padding-top:0px;
+  padding-top:20px;
 }
 a[href$='.pdf']::before{
   padding:0 6px 0 0;
